# RGVM

./: .clang-format  .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Instructions.cpp  RGVM.cpp  RGVM.h  instructions.h  parser.cpp  parser.h
tests/: CMakeLists.txt  tests.cpp
